--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -142,7 +142,7 @@
 
                             a {
                                 .icon-compte-on {
-                                    font-size: 18px;
+                                    font-size: 18px!important;
                                 }
                             }
                         }
