--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -168,6 +168,18 @@
         }
     }
     .blockreassurance {
+        @media (min-width: 1200px) {
+            width: 1040px;
+        }
+
+        @media (max-width: 1200px) {
+            width: 961px;
+        }
+
+        @media (max-width: 767px) {
+            width: unset;
+        }
+
         @media (max-width: 480px) {
             margin-top: 30px;
         }
