--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -168,22 +168,24 @@
         }
     }
     .blockreassurance {
-        @media (min-width: 1200px) {
-            width: 1040px;
-        }
-
-        @media (max-width: 1200px) {
-            width: 961px;
-        }
-
-        @media (max-width: 767px) {
-            width: unset;
-        }
+        background-color:  blue;
 
         @media (max-width: 480px) {
             margin-top: 30px;
         }
         .row {
+            @media (min-width: 1200px) {
+                width: 1040px;
+                margin: 0 auto;
+            }
+    
+            @media (max-width: 1200px) {
+                width: 961px;
+            }
+    
+            @media (max-width: 767px) {
+                width: unset;
+            }
             margin: 0 auto;
             .offset-md-0 {
                 .block-icon {
