--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -26,6 +26,20 @@
     display: none;
 }
 
+.page-search {
+    #_desktop_search_widget {
+        form {
+            input[type=text] {
+                display: block;
+                position: relative;
+                border-radius: 10px;
+                line-height: 5px;
+                border: 1px solid #000;
+            }
+        }
+    }
+}
+
 #mobile_loop {
     @media (max-width: 767px) {
         position: absolute;
@@ -89,18 +103,25 @@
 }
 
 .search-widget form input[type=text].navr {
-    display: block;
-    position: absolute;
-    right: 0;
-    animation: to-left-1 3s linear forwards;
+    display: block !important;
+    position: relative;
+    animation: to-left-1 .3s linear forwards;
+    width: 0;
+    min-width: unset;
+    overflow: hidden;
+    border-radius: 10px;
+    line-height: 5px;
+    border: 1px solid #000;
 }
 
 @keyframes to-left-1 {
     from {
         width: 50%;
+        right: -20px;
     }
     to {
         width: 100%;
+        right: 0;
     }
 }
 
@@ -139,7 +160,6 @@
                             margin-left: 27px;
                             margin-top: 0;
                             padding: .75rem 0;
-
                             a {
                                 .icon-compte-on {
                                     font-size: 18px!important;
