--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -1,5 +1,8 @@
 #cms {
     #content {
+        h2 {
+            text-transform: uppercase;
+        }
         .header {
             position: relative;
             width: 100%;
