--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -15,6 +15,10 @@
             .product-container {
                 margin: 0 auto;
                 width: 100%;
+
+                @media (max-width: 768px) {
+                    margin-top: 50px;
+                }
                 // .title {
                 //     h1 {
                 //         text-align: center;
@@ -426,6 +430,11 @@
         margin: 120px auto;
         padding-left: 15px;
         padding-right: 15px;
+
+        @media (max-width: 768px) {
+            margin-top: 50px;
+            margin-bottom: 80px;
+        }
         .h5 {
             margin-bottom: 20px;
             span {
