--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -191,7 +191,7 @@
                                     p {
                                         &:last-child {
                                             margin-bottom: 2rem;
-                                            font-size: 16px;
+                                            //font-size: 16px;
                                             max-height: 66px;
                                         }
                                     }
