nutrition color limit

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -658,6 +658,10 @@
                                 margin: 0 auto;
                             }
 
+                            .color_nutrition {
+                                border: 1px solid green;
+                            }
+
                             .green {
                                 color: green;
                                 border: 1px solid green;
