--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -34,6 +34,9 @@
                 }
             }
             .featured-products {
+                @media (max-width: 480px) {
+                    margin-bottom: -50px;
+                }
                 margin-top: 70px;
                 h2 {
                     @include title;
