--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -102,6 +102,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             @media (max-width: 767px) {
                 margin: 0;
                 padding: 20px 0 40px;
+                margin-top: 20px;
             }
             .menu-block-child {
                 .menu-block-child-name {
