--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -191,8 +191,10 @@
                                     p {
                                         &:last-child {
                                             margin-bottom: 2rem;
-                                            //font-size: 16px;
-                                            max-height: 66px;
+                                            
+                                            @media (min-width: 480px) {
+                                                max-height: 66px;
+                                            }
                                         }
                                     }
                                 }
