--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -222,6 +222,11 @@
                                     @media (max-width: 480px) {
                                         width: 30%;
                                     }
+
+                                    @media (max-width: 370px) {
+                                        width: auto;
+                                        margin-right: 20px;
+                                    }
                                 }
                                 .product-variants {
                                     .product-variants-item {
@@ -250,6 +255,11 @@
                                                         padding: 2px 20px 15px;
                                                         height: 27px;
                                                         margin-bottom: 0;
+
+                                                        @media (max-width: 370px) {
+                                                            padding: 0 5px;
+                                                        }
+
                                                         span {
                                                             left: 0;
                                                             font-size: 16px;
@@ -278,6 +288,10 @@
                                                 }
                                                 >input {
                                                     width: 5rem;
+
+                                                    @media (max-width: 370px) {
+                                                        width: 3rem;
+                                                    }
                                                 }
                                             }
                                             .product-prices {
@@ -296,6 +310,10 @@
                                                             letter-spacing: 1px;
                                                             @media (max-width: 480px) {
                                                                 font-size: 20px;
+                                                            }
+
+                                                            @media (max-width: 370px) {
+                                                                font-size: 16px;
                                                             }
                                                         }
                                                     }
@@ -566,9 +584,10 @@
                         a {
                             color: $greylight;
                             text-decoration: none;
-                            padding-right: 15px;
-                            padding-left: 15px;
                             margin: auto;
+                            font-weight: 600;
+                            
+
                         }
                     }
                 }
@@ -576,9 +595,16 @@
                     padding-left: 20px;
                     padding-right: 20px;
                 }
+
+                @media (max-width: 360px) {
+                    padding-left: 5px;
+                    padding-right: 5px;
+                }
+
                 li {
-                    &:nth-child(2) {
-                        width: 100px;
+                    &:nth-child(2),
+                    &:nth-child(3) {
+                        width: 70px;
                         text-align: center;
                     }
                 }
@@ -587,6 +613,7 @@
         .info-detailed-titler {
             width: 100%;
             padding-left: 0;
+            padding-right: 0;
             display: none;
             height: 205px;
             border-bottom: 1px solid $grey_border;
@@ -704,7 +731,7 @@
                     }
                 }
             }
-            #history {
+            #en_savoir_plus {
                 @media (max-width: 768px) {
                     padding-left: 20px;
                     padding-right: 20px;
@@ -739,6 +766,10 @@
             letter-spacing: 1.8px;
             text-transform: uppercase;
             text-align: center;
+
+            @media (max-width: 370px) {
+                line-height: 1.5;
+            }
         }
         .flex {
             position: relative;
