--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -146,6 +146,17 @@
                             font-size: 14px;
                             font-family: $alegreya;
                         }
+
+                        .footer_sub_menu_44320 {
+                            li {
+                                &:nth-child(2),
+                                &:nth-child(4),
+                                &:nth-child(7),
+                                &:nth-child(8) {
+                                    margin-bottom: 30px;
+                                }
+                            }
+                        }
                     }
                 }
             }
