--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -239,6 +239,12 @@
                 line-height: 1.5;
             }
         }
+
+        .en-off-block {
+            @media (max-width: 767px) {
+                margin-bottom: 40px;
+            }
+        }
     }
     .custom-text {
         color: #232323;
