--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -123,18 +123,6 @@
                         }
                     }
                 }
-                .block_newsletter {
-                    .row {
-                        @media (max-width: 768px) {
-                            padding-left: 15px;
-                        }
-                        >p {
-                            @media (max-width: 768px) {
-                                padding: 0;
-                            }
-                        }
-                    }
-                }
                 .col-md-7 {
                     .col-lg-4 {
                         .titre {
@@ -154,6 +142,43 @@
                                 &:nth-child(7),
                                 &:nth-child(8) {
                                     margin-bottom: 30px;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .right-block {
+                    @media (max-width: 768px) {
+                        padding-right: 0;
+                    }
+                    
+                    .block_newsletter {
+                        .row {
+                            @media (max-width: 768px) {
+                                padding-left: 15px;
+                            }
+                            >p {
+                                @media (max-width: 768px) {
+                                    padding: 0;
+                                }
+                            }
+
+                            .col-xs-1 {
+                                @media (max-width: 768px) {
+                                    padding-right: 0;
+                                }
+
+                                form {
+                                    .alert {
+                                        margin-left: 15px;
+                                    }
+
+                                    .row {
+                                        > .col-xs-12 {
+                                            padding-right: 0;
+                                        }
+                                    }
                                 }
                             }
                         }
