--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -208,6 +208,11 @@
             margin-top: 30px;
         }
         .row {
+
+            @media (min-width: 2560px) {
+                width: 1440px;
+                margin: 0 auto;
+            }
             @media (min-width: 1200px) {
                 width: 1040px;
                 margin: 0 auto;
