--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,7 +5,6 @@
 @media (min-width: 1200px) {
     #header .header-nav {
         max-height: 100%;
-        border: none;
     }
     #header .header-nav .row {
         display: flex;
@@ -18,6 +17,7 @@
     }
     #header .header-nav .row .navigation-header #_desktop_logo {
         margin-top: -2em;
+        margin-bottom: 3em;
     }
     /* #header .header-nav .row .header-bottom {
         width: 100%;
