--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -6,6 +6,8 @@
     width: 400px;
     height: 120.75px;
     margin-left: 45px;
+    margin: 0 auto;
+    display: block;
     // @media (max-width: 480px) {
     //     max-width: 240px;
     //     max-height: 72.453px;
@@ -16,7 +18,7 @@
     .text-search {
         position: absolute;
         right: 2.5rem;
-        top: .7em;
+        top: 1em;
         font-size: 12px;
     }
 }
@@ -144,87 +146,93 @@
         .header-nav {
             max-height: 100%;
             margin-top: 80px;
-            border: none;
-            .row {
-                display: flex;
-                flex-wrap: nowrap;
-                border-bottom: 1px solid $grey_border;
-                position: relative;
-                .right-nav {
-                    position: absolute;
-                    right: 0;
-                    top: -40px;
-                    #_desktop-user_info {
-                        .user-info {
-                            margin-left: 27px;
-                            margin-top: 0;
-                            padding: .75rem 0;
-                            a {
-                                .icon-compte-on {
-                                    font-size: 18px!important;
-                                }
-                            }
-                        }
-                    }
-                    #_desktop_cart {
-                        .header {
-                            margin-top: 0;
-                            .hidden-sm-down {
-                                font-size: 11px;
-                            }
-                            .cart-products-count {
-                                font-size: 12px;
-                                ;
-                            }
-                        }
-                    }
-                }
-                .navigation-header {
+            border-bottom: 1px solid $grey_border;
+            .container {
+                .row {
                     display: flex;
-                    width: 100%;
+                    flex-wrap: nowrap;
                     position: relative;
-                    #_desktop_logo {
-                        margin-top: 3rem;
-                        .logo {
-                            display: block;
-                        }
+
+                    @media (min-width: 1679px) and (max-width: 2560px) {
+                        width: 1440px;
+                        margin: 0 auto;
                     }
+                    
                     .right-nav {
-                        width: 300px;
                         position: absolute;
                         right: 0;
-                        top: -35px;
-                    }
-                }
-                .header-bottom {
-                    width: 100%;
-                    padding: 0;
-                    position: absolute;
-                    bottom: 0;
-                    text-align: center;
-                    .menu {
-                        width: 1010px;
-                        >ul {
-                            margin-bottom: -8px;
-                            float: right;
-                            >li {
-                                margin-right: 50px;
-                                .menu-item-title {
-                                    font-family: $unna;
-                                    font-size: 20px;
-                                    text-transform: none;
-                                    letter-spacing: 0px;
-                                    line-height: 23px;
-                                    a {
-                                        padding-left: 0;
-                                        padding-right: 0;
+                        top: -40px;
+                        #_desktop-user_info {
+                            .user-info {
+                                margin-left: 27px;
+                                margin-top: 0;
+                                padding: .75rem 0;
+                                a {
+                                    .icon-compte-on {
+                                        font-size: 18px!important;
                                     }
                                 }
-                                &:last-child {
-                                    margin-right: 0;
+                            }
+                        }
+                        #_desktop_cart {
+                            .header {
+                                margin-top: 0;
+                                .hidden-sm-down {
+                                    font-size: 11px;
+                                }
+                                .cart-products-count {
+                                    font-size: 12px;
+                                    ;
+                                }
+                            }
+                        }
+                    }
+                    .navigation-header {
+                        display: flex;
+                        position: relative;
+                        #_desktop_logo {
+                            margin-bottom: 5rem;
+                            .logo {
+                                display: block;
+                            }
+                        }
+                        .right-nav {
+                            width: 300px;
+                            position: absolute;
+                            right: 0;
+                            top: -35px;
+                        }
+                    }
+                    .header-bottom {
+                        width: 100%;
+                        padding: 0;
+                        position: absolute;
+                        bottom: 0;
+                        text-align: center;
+                        .menu {
+                            width: 1010px;
+                            >ul {
+                                margin-bottom: -8px;
+                                margin: 0 auto;
+                                >li {
+                                    margin-right: 50px;
                                     .menu-item-title {
+                                        font-family: $unna;
+                                        font-size: 20px;
+                                        text-transform: none;
+                                        letter-spacing: 0px;
+                                        line-height: 23px;
                                         a {
+                                            padding-left: 0;
                                             padding-right: 0;
+                                        }
+                                    }
+                                    &:last-child {
+                                        margin-right: 0;
+                                        .menu-item-title {
+                                            a {
+                                                padding-right: 0;
+                                            }
                                         }
                                     }
                                 }
