--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -183,6 +183,8 @@
                         }
                         .product-information {
                             margin-top: 30px;
+                            overflow: scroll;
+                            height: 120px;
                             span {
                                 display: block;
                             }
