--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -135,7 +135,7 @@
                             font-family: $alegreya;
                         }
 
-                        .footer_sub_menu_44320 {
+                        #footer_sub_menu_44320 {
                             li {
                                 &:nth-child(2),
                                 &:nth-child(4),
