--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -136,11 +136,14 @@
                         }
 
                         .footer_recettes {
-                            &:nth-child(2),
-                            &:nth-child(4),
-                            &:nth-child(7),
-                            &:nth-child(8) {
-                                margin-bottom: 30px;
+                        background-color: blue;
+                            li {
+                                &:nth-child(2),
+                                &:nth-child(4),
+                                &:nth-child(7),
+                                &:nth-child(8) {
+                                    margin-bottom: 30px;
+                                }
                             }
                         }
                     }
