--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -867,6 +867,7 @@
                     font-family: $unna;
                     margin: 0;
                     line-height: 30px;
+                    color: $black;
                     @media screen and (max-width: 767px) {
                         margin-left: 0;
                         font-size: 16px;
@@ -883,15 +884,14 @@
                 left: -16px;
             }
             
-            p {
-                padding-bottom: 20px;
-            }
         }
     }
     
     .origin {
         .flex {
             .text-info {
+                right: 0;
+                left: -300px;
                 @media (max-width: 480px) {
                     left: 14px;
                 }
