--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -877,7 +877,7 @@
             }
         }
     }
-    .secret,
+    .origin,
     .bocaux {
         .text-info {
             @media (max-width: 480px) {
@@ -887,7 +887,7 @@
         }
     }
     
-    .origin {
+    .secret {
         .flex {
             .text-info {
                 right: 0;
