--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -858,6 +858,7 @@
                 }
                 @media (max-width: 480px) {
                     top: 150px;
+                    bottom: auto;
                     width: auto;
                     padding: 20px 30px;
                     z-index: 99;
