--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -881,7 +881,7 @@
     .bocaux {
         .text-info {
             @media (max-width: 480px) {
-                right: -14px;
+                right: -14px!important;
             }
             
         }
@@ -893,7 +893,7 @@
                 right: 0;
                 left: -15px;
                 @media (max-width: 480px) {
-                    left: 14px;
+                    left: 14px!important;
                 }
             }
         }
