--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -890,10 +890,9 @@
     .secret {
         .flex {
             .text-info {
-                right: 0;
-                left: -15px;
+                left: 0;
                 @media (max-width: 480px) {
-                    left: 14px!important;
+                    left: -15px;
                 }
             }
         }
