fix retours + fiche produit

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -894,6 +894,7 @@
                 left: auto;
                 @media (max-width: 769px) {
                     left: -15px;
+                    right: auto
                 }
             }
         }
