fix fiche produit

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -861,6 +861,7 @@
                     padding: 20px 30px;
                     z-index: 99;
                     left: auto;
+                    position: relative;
                 }
                 p {
                     font-size: 21px;
