--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -33,10 +33,12 @@
             }
             article.store-item {
                 padding: 20px;
+                height: 300px;
                 .store-item-container {
                     background: #fef9f5;
                     padding: 20px;
                     position: relative;
+                    height: 100%;
                     .h3.card-title {
                         font-size: 20px;
                     }
