--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -30,6 +30,8 @@
                 text-transform: uppercase;
                 text-align: center;
                 margin-bottom: 40px;
+                width: 75%;
+                line-height: 30px;
             }
             article.store-item {
                 padding: 20px;
