--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -8,6 +8,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             font-size: 11px;
+            cursor: pointer;
         }
         #localise {
             height: 3rem;
@@ -21,6 +22,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             font-size: 11px;
+            cursor: pointer;
         }
         #stores-filter {
             margin-top: 120px;
