header version mobile

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -130,7 +130,7 @@
                                     font-size: 12px;
                                     margin-top: 10px;
                                     position: absolute;
-                                    top: calc(100% + 10px);
+                                    top: 100%;
                                     height: auto;
                                     font-weight: 500;
                                     line-height: 27px;
