--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,11 +32,10 @@
 }
 
 @media (max-width: 1200px) {
-    #header .header-nav {
-        border: none;
+    /* #header .header-nav {
         margin: 0;
         padding-bottom: 20px;
-    }
+    } */
     #header .header-nav .row .navigation-header {
         display: flex;
         width: 100%;
