--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -140,12 +140,18 @@
 
 /* Header */
 
-@media (min-width: 1200px) {
+@media (min-width: 769px) {
     #header {
         .header-nav {
             max-height: 100%;
             margin-top: 80px;
             border-bottom: 1px solid $grey_border;
+            margin-bottom: 30px;
+
+            @media (max-width: 768px) {
+                margin-top: 0;
+            }
+
             .container {
                 .row {
                     display: flex;
@@ -193,6 +199,9 @@
                             margin-bottom: 5rem;
                             .logo {
                                 display: block;
+                            }
+                            @media (max-width: 768px) {
+                                margin-top: 0;
                             }
                         }
                         .right-nav {
@@ -246,25 +255,41 @@
 
 @media (max-width: 1200px) {
     #header {
-        position: relative;
-        @media (max-width: 767px) {
-            border-bottom: 1px solid $grey_border!important;
-        }
+        position: relative;        
+        
         .header-nav {
-            margin: 0;
-            padding-bottom: 20px;
             .row {
                 .navigation-header {
                     display: flex;
                     width: 100%;
                     position: relative;
-                    #_desktop_logo {
-                        img {
-                            margin-top: 3rem;
-                        }
-                    }
                     @media (min-width: 768px) {
                         margin-top: 2em;
+                    }
+                }
+
+                .header-bottom {
+                    >li {
+                        margin-right: 50px;
+                        .menu-item-title {
+                            font-family: $unna;
+                            font-size: 20px;
+                            text-transform: none;
+                            letter-spacing: 0px;
+                            line-height: 23px;
+                            a {
+                                padding-left: 0;
+                                padding-right: 0;
+                            }
+                        }
+                        &:last-child {
+                            margin-right: 0;
+                            .menu-item-title {
+                                a {
+                                    padding-right: 0;
+                                }
+                            }
+                        }
                     }
                 }
                 .right-nav {
