--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -12,6 +12,10 @@
     //     max-width: 240px;
     //     max-height: 72.453px;
     // }
+
+    @media (min-width: 480px) and (max-width: 769px) {
+        margin-top: 2rem;
+    }
 }
 
 #_desktop_search_widget {
@@ -201,7 +205,7 @@
                                 display: block;
                             }
                             @media (max-width: 768px) {
-                                margin-top: 0;
+                                margin-top: 3rem;
                             }
                         }
                         .right-nav {
@@ -218,7 +222,6 @@
                         bottom: 0;
                         text-align: center;
                         .menu {
-                            width: 1010px;
                             >ul {
                                 margin-bottom: -8px;
                                 margin: 0 auto;
