--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -196,10 +196,6 @@
                                 p {
                                     &:last-child {
                                         margin-bottom: 2rem;
-                                        
-                                        @media (min-width: 480px) {
-                                            max-height: 66px;
-                                        }
                                     }
                                 }
                             }
@@ -416,6 +412,10 @@
                             }
                         }
                         .product-information {
+                            @media (max-width: 1200px) {
+                                overflow: scroll;
+                                height: 120px;
+                            }
                             >div {
                                 p {
                                     span {
