--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -120,8 +120,8 @@
                             width: 50px;
                             height: 50px;
                             margin: 0 auto;
-                            display: inline-flex;
-                            align-items: center;
+                            display: table-cell;
+                            vertical-align: middle;
                         }
                     }
                     .abonnement-image {
