--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -613,6 +613,11 @@
             height: 205px;
             border-bottom: 1px solid $grey_border;
             overflow: scroll;
+
+            @media (min-width: 769px) and (max-width: 960px) {
+                height: auto;
+            }
+
             &::-webkit-scrollbar {
                 width: 10px;
             }
