--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -719,7 +719,9 @@
                     }
                 }
             }
-            #en_savoir_plus {
+            
+            #en_savoir_plus,
+            #preparation {
                 @media (max-width: 767px) {
                     padding-left: 20px;
                     padding-right: 20px;
