--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -557,15 +557,29 @@
         padding-right: 0;
         margin-bottom: 30px;
         #main-menu {
+            border-bottom: 1px solid $grey_border;
+            border-top: 1px solid $grey_border;
+
+            @media (max-width: 960px) {
+                overflow: scroll;
+            }
+
             ul {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 padding-top: 9px;
-                border-bottom: 1px solid $grey_border;
-                border-top: 1px solid $grey_border;
                 margin-bottom: 0;
                 height: 60px;
+                
+                @media (min-width: 767px) and (max-width: 960px) {
+                    width: 500px;
+                }
+
+                @media (max-width: 480px) {
+                    width: 500px;
+                }
+
                 .menu-tab {
                     font-size: 14px;
                     text-transform: uppercase;
@@ -594,11 +608,16 @@
                 }
                 li {
                     &:nth-child(2),
-                    &:nth-child(3) {
+                    &:nth-child(5) {
                         width: 70px;
                         text-align: center;
                     }
                 }
+            }
+
+            &::-webkit-scrollbar {
+                display: none;
+
             }
         }
         .info-detailed-titler {
