notre savoir-faire

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -1,3 +1,5 @@
+@import "global.scss";
+
 #cms {
     #content {
         h2 {
@@ -33,7 +35,7 @@
         }
         .bloc {
             h2 {
-                padding: 60px 40px;
+                padding: 0px 0px 56px 0px;
                 text-align: center;
             }
             .bloc-title {
@@ -46,13 +48,19 @@
                 background-color: #fef9f5;
             }
             .bloc-content {
-                padding: 0 140px 60px;
+                padding: 56px 200px;
                 @media (max-width: 768px) {
                     padding: 50px 43px;
                 }
                 img {
                     max-width: 100%;
                     height: auto;
+                }
+
+                p {
+                    font-family: $unna;
+                    font-size: 21px;
+                    line-height: 28px;
                 }
             }
             .bloc-image {
