notre savoir-faire

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -42,6 +42,7 @@
                 font-family: 'RobotoMono';
                 font-size: 18px;
                 text-transform: uppercase;
+                letter-spacing: 1.8px;
             }
             width: 100%;
             &:nth-child(2n+1) {
