notre savoir-faire

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -34,6 +34,8 @@
             }
         }
         .bloc {
+            margin-bottom: 21px;
+            
             h2 {
                 padding: 0px 0px 56px 0px;
                 text-align: center;
