--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -61,6 +61,9 @@
                         }
                     }
                     .avantage {
+                        @media (min-width: 1679px) and (max-width: 2560px) {
+                            padding-right: 110px;
+                        }
                         @media (min-width: 769px) {
                             border-right: 1px solid;
                             padding-right: 30px;
@@ -97,11 +100,9 @@
                     padding: 30px;
                     background: #fff;
                     width: 47%;
-
                     @media (max-width: 768px) {
                         width: 100%;
                     }
-
                     .abonnement-title {
                         border-left: 1px solid;
                         padding-left: 10px;
